<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".activities.EditCreatureActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCreatureName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_character_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintHorizontal_weight="0.5"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:id="@+id/textInputLayout2"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCreatureHp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_character_hp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintHorizontal_weight="0.5"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:id="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCreatureAc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_character_ac"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout4"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCreatureInitModifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_character_init_modifier"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:id="@+id/but_done"
            android:text="@string/button_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"/>

</androidx.constraintlayout.widget.ConstraintLayout>